--- a/index.html
+++ b/index.html
@@ -12,6 +12,29 @@
 </head>
 
 <body>
+    <div id="calculator">
+        <input type="text" id="text" readonly>
+        <div id="buttons">
+            <button class="number" onclick="appendToDisplay('7')">7</button>
+            <button class="number" onclick="appendToDisplay('8')">8</button>
+            <button class="number" onclick="appendToDisplay('9')">9</button>
+            <button class="operation" onclick="appendToDisplay('+')">+</button>
+            <button class="number" onclick="appendToDisplay('4')">4</button>
+            <button class="number" onclick="appendToDisplay('5')">5</button>
+            <button class="number" onclick="appendToDisplay('6')">6</button>
+            <button class="operation" onclick="appendToDisplay('-')">-</button>
+            <button class="number" onclick="appendToDisplay('1')">1</button>
+            <button class="number" onclick="appendToDisplay('2')">2</button>
+            <button class="number" onclick="appendToDisplay('3')">3</button>
+            <button class="operation" onclick="appendToDisplay('*')">*</button>
+            <button class="number" onclick="appendToDisplay('0')">0</button>
+            <button class="number" onclick="appendToDisplay('.')">.</button>
+            <button class="clear" onclick="appendToDisplay()">C</button>
+            <button class="operation" onclick="appendToDisplay('/')">/</button>
+            <button class="equal" onclick="calculate()">=</button>
+
+        </div>
+    </div>
 
 
 
