--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="calculator">
-        <input type="text" id="text" readonly>
+        <input type="text" id="display" readonly>
         <div id="buttons">
             <button class="number" onclick="appendToDisplay('7')">7</button>
             <button class="number" onclick="appendToDisplay('8')">8</button>
@@ -32,7 +32,6 @@
             <button class="clear" onclick="appendToDisplay()">C</button>
             <button class="operation" onclick="appendToDisplay('/')">/</button>
             <button class="equal" onclick="calculate()">=</button>
-
         </div>
     </div>
 
