--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <button class="operation" onclick="appendToDisplay('*')">*</button>
             <button class="number" onclick="appendToDisplay('0')">0</button>
             <button class="number" onclick="appendToDisplay('.')">.</button>
-            <button class="clear" onclick="appendToDisplay()">C</button>
+            <button class="clear" onclick="clearDisplay()">C</button>
             <button class="operation" onclick="appendToDisplay('/')">/</button>
             <button class="equal" onclick="calculate()">=</button>
         </div>
