--- a/index.html
+++ b/index.html
@@ -15,24 +15,58 @@
     <div id="calculator">
         <input type="text" id="display" readonly>
         <div id="buttons">
+            <button class="function" onclick="appendfunction('sqrt')">√</button>
+            <button class="function" onclick="appendfunction('exp')">x<sup>n</sup></button>
+            <button class="function" onclick="appendfunction('mod')">%</button>
+            <button class="function" onclick="appendfunction('cos')">cos</button>
+
+            <button class="function" onclick="appendfunction('sin')">sin</button>
+            <button class="function" onclick="appendfunction('tan')">tan</button>
+            <button class="function" onclick="appendfunction('pi')">π</button>
+            <button class="operation" onclick="appendToDisplay('/')">/</button>
+
             <button class="number" onclick="appendToDisplay('7')">7</button>
             <button class="number" onclick="appendToDisplay('8')">8</button>
             <button class="number" onclick="appendToDisplay('9')">9</button>
             <button class="operation" onclick="appendToDisplay('+')">+</button>
+
             <button class="number" onclick="appendToDisplay('4')">4</button>
             <button class="number" onclick="appendToDisplay('5')">5</button>
             <button class="number" onclick="appendToDisplay('6')">6</button>
             <button class="operation" onclick="appendToDisplay('-')">-</button>
+
             <button class="number" onclick="appendToDisplay('1')">1</button>
             <button class="number" onclick="appendToDisplay('2')">2</button>
             <button class="number" onclick="appendToDisplay('3')">3</button>
             <button class="operation" onclick="appendToDisplay('*')">*</button>
+
             <button class="number" onclick="appendToDisplay('0')">0</button>
             <button class="number" onclick="appendToDisplay('.')">.</button>
-            <button class="clear" onclick="clearDisplay()">C</button>
-            <button class="operation" onclick="appendToDisplay('/')">/</button>
+            <button class="number" onclick="appendToDisplay('(')">(</button>
+            <button class="number" onclick="appendToDisplay(')')">)</button>
+
+            <button class="delete" onclick="eraseLastCaracter()">CE</button>
             <button class="equal" onclick="calculate()">=</button>
+            <button class="clear" onclick="clearDisplay()">AC</button>
+
         </div>
+    </div>
+    <div id="historyResult">
+        <table>
+            <thead>
+                <tr>
+                    <th colspan="2">Historique des calculs</th>
+                    <th colspan="2">Résultat</th>
+                    <th>Delete</th>
+
+                </tr>
+            </thead>
+            <tbody id="tableResult">
+                <!-- ici on affiche le resultat du local storage sous la forme de tableau  tr > td-->
+
+            </tbody>
+        </table>
+
     </div>
 
 
